Fix navbar spacing problem

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
@@ -39,6 +40,12 @@ a{
 
 
 /*Home Page Product*/
+.home-page{
+  border: rgb(161, 21, 108) solid;
+  width: 80%;
+  margin: auto;
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -116,13 +123,18 @@ a{
 }
 
 /*Navigation Bar*/
+nav{
+  margin: 0;
+}
+
 nav ul{
   display: flex;
   justify-content: space-around;
   align-items: center;
   background-color: brown;
   flex-wrap: wrap;
-  padding-left: 0;
+  padding: 10px 0px;
+  margin: 0;
   
 }
 
